# aktualizr

src/: CMakeLists.txt
src/aktualizr_primary/: CMakeLists.txt  secondary.cc  secondary_config.cc  secondary_config.h
src/aktualizr_secondary/: update_agent_ostree.cc
src/custom_secondary/: CMakeLists.txt  custom-secondary.cc  custom-secondary.h
src/libaktualizr/primary/: aktualizr.cc  aktualizr.h  sotauptaneclient.cc
src/libaktualizr/storage/: fsstorage_read.cc  fsstorage_read.h  invstorage.h  sqlstorage.cc  sqlstorage.h  storage_common_test.cc
src/libaktualizr/uptane/: uptane_test.cc
